update diretory wallpaper 1.1

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('../assets/background-image_1.jpg');
+    background-image: url('./assets/background-image_1.jpg');
 }
 
 .container {
