--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('./assets/background-image_1.jpg');
+    background-color: var(--color-primary);
 }
 
 .container {
@@ -16,10 +16,9 @@ html, body {
     flex-direction: column;
     height: 550px;
     width: 450px;
-    background: radial-gradient(circle, #4744ff, #3a68ff, #4739ff, #4586ff);
+    background: radial-gradient(circle, #d4d4d4, #d8d8d8, #dddddd, #b1b1b1);
     border-radius: 8px;
-    border: 4px solid aliceblue;
-    color: aliceblue;;
+    border: 4px solid rgba(255, 255, 255, 0.219);
 }
 
 .container .title {
@@ -52,15 +51,14 @@ html, body {
     font-size: 17px;
     font-weight: 700;
     padding-left: 4px;
-    color: aliceblue;
     background-color: transparent;
-    border: 2px solid aliceblue;
+    border: 2px solid var(--color-quaternary);
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
 
 .form-container input:focus {
-    border: 2px solid #00ff00;
+    border: 2px solid var(--color-secondary);
 }
 
 .form-container select {
@@ -72,27 +70,27 @@ html, body {
     border-radius: 4px;
     font-size: 17px;
     font-weight: 700;
-    color: aliceblue;
+    color: var(--color-quinary);
     background-color: transparent;
-    border: 2px solid aliceblue;
+    border: 2px solid var(--color-quaternary);
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
 
 .form-container select:focus {
-    border: 2px solid #00ff00;
+    border: 2px solid var(--color-secondary);
 }
 
 .form-container select option {
-    background-color: #3a68ff;
-    color: aliceblue;
+    background-color: #d8d8d8;
+    color: var(--color-quinary);
     font-size: 17px;
     font-weight: 600;
-    border: 1px solid aliceblue;
+    border: 1px solid var(--color-quaternary);
 }
 
 ::-webkit-input-placeholder {
-    color: aliceblue;
+    color: var(--color-quinary);
     font: 16px arial, sans-serif;
     font-weight: 600;
 }
@@ -107,17 +105,17 @@ html, body {
     font-size: 17px;
     font-weight: 700;
     padding-left: 4px;
-    color: #000;
-    background-color: aliceblue;
-    border: 2px solid aliceblue;
+    color: var(--color-primary);
+    background-color: var(--color-quaternary);
+    border: 2px solid var(--color-primary);
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
 
 .form-container button:hover {
-    background-color: #00ff00;
-    border-color: aliceblue;
-    color: aliceblue;
+    background-color: var(--color-secondary);
+    border-color: var(--color-primary);
+    color: var(--color-primary);
     font-weight: 700;
     transform: scale(1.05);
 }
@@ -134,7 +132,7 @@ html, body {
     justify-content: center;
     font-size: 18px;
     font-weight: 500;
-    background-color: #5e96ff;
+    background-color: var(--color-quinary);
     border-radius: 5px;
 }
 
@@ -145,6 +143,7 @@ html, body {
     height: 50px;
     font-size: 22px;
     font-weight: 700;
-    background-color: #002b7c;
+    color: var(--color-primary);
+    background-color: var(--color-secondary);
     border-radius: 5px;
 }
